[gd_scene load_steps=14 format=3 uid="uid://b5lgniaadan1y"]

[ext_resource type="Script" path="res://src/frog/frog.gd" id="1_mohle"]
[ext_resource type="Texture2D" uid="uid://drc3tx8lxpafq" path="res://icon.svg" id="2_6op5o"]
[ext_resource type="Script" path="res://src/frog/frog_controller.gd" id="2_mpehw"]
[ext_resource type="Script" path="res://addons/xsm/state.gd" id="2_ucc1o"]
[ext_resource type="Script" path="res://src/frog/xsm/frog_idle.gd" id="4_sbak6"]
[ext_resource type="Script" path="res://src/frog/xsm/frog_hop.gd" id="5_dasfo"]
[ext_resource type="Script" path="res://src/frog/xsm/frog_jump.gd" id="6_5df1m"]
[ext_resource type="Script" path="res://src/frog/xsm/frog_fall.gd" id="7_c7jib"]
[ext_resource type="Script" path="res://src/frog/xsm/frog_land.gd" id="8_4670w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2qfv"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_77ydr"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_4ue2v"]
resource_name = "land"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_praai"]
_data = {
"idle": SubResource("Animation_77ydr"),
"land": SubResource("Animation_4ue2v")
}

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_mohle")

[node name="icon" type="Sprite2D" parent="."]
position = Vector2(0, -32)
scale = Vector2(0.515625, 0.484375)
texture = ExtResource("2_6op5o")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_p2qfv")

[node name="Controller" type="Node" parent="."]
script = ExtResource("2_mpehw")
max_jump_height = 250.0
hop_height = 60.0
min_jump_height = 100.0
hop_duration = 0.2
jump_duration = 0.5
falling_gravity_multiplier = 2.0
friction = 50
jump_buffer = 0.3
x_speed = 2000.0

[node name="xsm" type="Node" parent="."]
script = ExtResource("2_ucc1o")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("..")
timed = false
next_state = NodePath("idle")

[node name="idle" type="Node" parent="xsm"]
script = ExtResource("4_sbak6")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "idle"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("../idle")

[node name="hop" type="Node" parent="xsm"]
script = ExtResource("5_dasfo")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("../idle")

[node name="jump" type="Node" parent="xsm"]
script = ExtResource("6_5df1m")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("../idle")

[node name="fall" type="Node" parent="xsm"]
script = ExtResource("7_c7jib")
no_stop_land_time = 0.5
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("../idle")

[node name="land" type="Node" parent="xsm"]
script = ExtResource("8_4670w")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "land"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("../idle")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_praai")
}

[node name="rc_front" type="RayCast2D" parent="."]
position = Vector2(0, -31)
target_position = Vector2(36, 0)

[connection signal="direction_changed" from="Controller" to="." method="_on_controller_direction_changed"]
[connection signal="hit_ground" from="Controller" to="." method="_on_controller_hit_ground"]
[connection signal="hopped" from="Controller" to="." method="_on_controller_hopped"]
[connection signal="jump_requested" from="Controller" to="." method="_on_controller_jump_requested"]
[connection signal="jumped" from="Controller" to="." method="_on_controller_jumped"]
[connection signal="started_falling" from="Controller" to="." method="_on_controller_started_falling"]
